# Signature

backend/: .env.example  Cargo.toml  build-errors.txt
backend/migrations/: .gitkeep  0002_create_users.sql
backend/src/: errors.rs  main.rs  state.rs
backend/src/auth/: jwt.rs  mod.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/dto/: mod.rs
backend/src/handlers/: auth.rs  health.rs  mod.rs
backend/src/models/: user.rs
backend/src/routes/: auth.rs  mod.rs
backend/src/services/: mod.rs
backend/src/utils/: password.rs
reference-keycast/: .dockerignore  .env.example  .gcloudignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  biome.json  bun.lockb  cloudbuild.yaml  compose.local.yml  docker-compose.deps.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
reference-keycast/.cursor/: mcp.json
reference-keycast/.github/workflows/: build-test-push.yaml
reference-keycast/api/: .gitignore  Cargo.toml  LICENSE  README.md  openapi.yaml
reference-keycast/api/src/: bcrypt_queue.rs  divine_names.rs  email_service.rs  lib.rs  nip98.rs  state.rs  technical_docs.rs
reference-keycast/api/tests/: admin_batch_claim_test.rs  admin_preload_test.rs  admin_token_test.rs  authorization_handle_test.rs  bcrypt_cleanup_test.rs  change_key_test.rs  headless_auth_test.rs  multi_device_auth_test.rs  nostr_rpc_integration_test.rs  oauth_deferred_registration_test.rs  oauth_unit_test.rs  password_flow_test.rs  rpc_permission_edge_cases_test.rs  team_relations_test.rs  tenant_race_condition_test.rs
reference-keycast/cluster-hashring/: Cargo.toml
reference-keycast/cluster-hashring/src/: coordinator.rs  error.rs  lib.rs  registry.rs  ring.rs
reference-keycast/core/: Cargo.toml
reference-keycast/core/examples/: migrate-vine-users.rs  test-kms.rs
reference-keycast/core/src/: authorization_channel.rs  bunker_key.rs  database.rs  instance.rs  lib.rs  metrics.rs  oauth_scopes.rs  secret_pool.rs  secret_types.rs  signing_handler.rs  signing_session.rs  tenant_query.rs  traits.rs
reference-keycast/database/: Dockerfile
reference-keycast/database/migrations/: 0001_initial_schema.sql  0002_update_tenant_relay_defaults.sql  0003_add_refresh_tokens.sql  0004_preloaded_accounts.sql  0005_add_is_headless_to_oauth_codes.sql  0006_drop_signing_activity.sql
reference-keycast/docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  EMAIL_VERIFICATION_POLLING.md  HEADLESS_AUTH.md  IDENTITY_INTEGRATION_GUIDE.md  ISSUES.md  MONITORING.md  SECURITY.md  SECURITY_LADDER.md  SESSION_HINT_PROPOSAL.md  SIGNER_RELIABILITY_GUIDE.md  SILENT_REAUTH_IMPLEMENTATION.md  TEAMS.md  WORK_QUEUE_ARCHITECTURE_REVIEW.md  keycast-admin-api-reference.md  oauth-prompt-and-nsec-input.md  vine-import-guide.md
reference-keycast/docs/archive/: ARCHITECTURE_MULTIDOMAIN.md  COMPLETED_ISSUES.md  MPSC_RELOAD_REFACTOR_PLAN.md  OPENVINE_KEYCAST_ADAPTATION.md  README.md  notes_on_hsm_signing_in_enclosure.md  test-profile-publishing.md
reference-keycast/docs/examples/: vine-import-example.ts
reference-keycast/e2e/: global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  tsconfig.json
reference-keycast/e2e/fixtures/: callback.html
reference-keycast/e2e/helpers/: admin.ts  auth.ts  db.ts  nip46.ts  oauth.ts  redis.ts
reference-keycast/e2e/tests/: admin.spec.ts  auth.spec.ts  claim.spec.ts  oauth.spec.ts  sessions.spec.ts  signing.spec.ts
reference-keycast/examples/: NOSTR_LOGIN_IMPLEMENTATION_DONE.md  NOSTR_LOGIN_INTEGRATION.md  OAUTH_NOSTR_README.md  README.md  TESTING_SUMMARY.md  TEST_RESULTS.md  index.html  keycast-auth-test.html  keycast-test-bundled.html  nostr-client-enhanced.html  nostr-client-full.html  nostr-client-oauth-ndk.html  nostr-client-oauth-tools.html  nostr-client-oauth.html  nostr-login-test.html  nostr-oauth-sign-production.html  nostr-oauth-sign-test.html  nostr-oauth-sign-working.html  nostr-simple-oauth.html  oauth-callback.html  oauth-test-client.html  oauth-test.html  package-lock.json  package.json  test-client-integration.js  test-keycast.js  test-oauth-client.html  test-registration.spec.js  test_bunker_manual.html
reference-keycast/examples/test-results/: .last-run.json
reference-keycast/k8s/migrations/: README.md  migrate-vine-users-poc.yaml  migrate-vine-users-production.yaml
reference-keycast/keycast/: Cargo.toml
reference-keycast/keycast-login/: README.md  package.json  tsconfig.json
reference-keycast/keycast-login/src/: index.ts  oauth.ts  pkce.ts  rpc.ts  types.ts
reference-keycast/keycast-login/tests/: oauth.test.ts  pkce.test.ts  rpc.test.ts
reference-keycast/keycast/src/: main.rs
reference-keycast/scripts/: cleanup-corrupted-oauth.sh  deploy-litestream.sh  deploy-signer-litestream.sh  docker-entrypoint.sh  generate_key.sh  healthcheck.sh  init.sh  logs-watch.sh  manage-tenants.sh  migration-setup.sh  monitor-signer.sh  reset-prod-db.sh  run-qa-tests.sh  run-tests.sh  setup-test-env.sh  test-preload-idempotency.sh  view-logs.sh
reference-keycast/scripts/hooks/: pre-push
reference-keycast/signer/: Cargo.toml  config.toml
reference-keycast/signer/src/: error.rs  lib.rs  signer_daemon.rs  signer_manager.rs  work_queue.rs
reference-keycast/signer/tests/: client_pubkey_tests.rs  permission_validation_tests.rs  secret_key_format_test.rs  wire_encryption_tests.rs
reference-keycast/tests/: OAuth_TEST_README.md  e2e_oauth_test.sh  run_oauth_tests.sh  test_nostr_oauth_flow.sh
reference-keycast/tests/e2e/: PRODUCTION_VERIFICATION_REPORT.md  nip46.mjs  oauth.sh  package-lock.json  package.json  playwright.config.ts  test-frontend.sh
reference-keycast/tests/integration/: test-api.sh
reference-keycast/tests/qa/: Cargo.toml
reference-keycast/tools/: run-migrations.sh  run-sql.sh
reference-keycast/tools/loadtest/: .gitignore  Cargo.toml  README.md  docker-compose.scale.yml  flamegraph.sh  pgbouncer-scale.ini
reference-keycast/web/: README.md  bun.lockb  package.json  svelte.config.js  vite.config.ts
reference-keycast/web/src/: app.css  app.d.ts  app.html  (+1 more)
(+2937 files in other folders)
