[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1.18"
anyhow = "1.0"
argon2 = "0.4"
jsonwebtoken = "8"
chrono = { version = "0.4", features = ["serde"] }
rand_core = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
