[workspace]
members = ["api", "core", "signer", "keycast", "cluster-hashring", "tools/loadtest"]
exclude = ["tests/qa"]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
base64 = "0.22"
chrono = {version = "0.4", features = ["serde"]}
config = "0.15"
dotenv = "0.15"
nostr = {version = "0.44", features = ["nip04", "nip44", "nip46", "nip49", "nip59"]}
nostr-sdk = {version = "0.44", features = ["nip04", "nip44", "nip49", "nip59"]}
once_cell = "1.2"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "migrate", "macros", "chrono", "derive", "json", "tls-rustls" ] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.5", features = ["v4", "fast-rng"] }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["derive"] }
