[package]
name = "keycast_core"
authors = ["Keycast Authors"]
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
base64 = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
gcp_auth = "0.12"
google-cloud-kms = "0.6"
hex = "0.4"
hkdf = "0.12"
lazy_static = "1.5.0"
moka = { version = "0.12", features = ["future"] }
nostr = { workspace = true }
nostr-sdk = {workspace = true}
once_cell = "1.2"
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
urlencoding = "2.1"
uuid = { workspace = true }
anchorhash = "0.2"
secrecy = { workspace = true }
zeroize = { workspace = true }
bcrypt = "0.17.1"
crossbeam-channel = "0.5"
subtle = "2.5"
