[package]
name = "keycast"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "keycast"
path = "src/main.rs"

[dependencies]
keycast_core = { path = "../core" }
keycast_api = { path = "../api" }
keycast_signer = { path = "../signer" }
cluster-hashring = { path = "../cluster-hashring" }

# Nostr
nostr-sdk = { workspace = true }

# Web framework
axum = { version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dotenv = "0.15"
num_cpus = "1.16"
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
serde_json = "1.0"
sqlx = { workspace = true }
uuid = { version = "1", features = ["v4"] }
zeroize = { workspace = true }

[dev-dependencies]
serial_test = "3.2"
