[package]
name = "keycast-loadtest"
version = "0.1.0"
edition = "2021"
description = "Load testing tool for Keycast HTTP RPC endpoint"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Database (for direct DB mode)
sqlx = { workspace = true }

# Nostr keys
nostr = { workspace = true }
nostr-sdk = { workspace = true }

# UCAN token generation
ucan = "0.7.0-alpha.1"
did-key = "0.2"
bs58 = "0.5"
secp256k1 = { version = "0.29", features = ["global-context", "rand-std"] }
sha2 = "0.10"
async-trait = "0.1"

# Encryption (for DB mode personal_keys)
aes-gcm = "0.10"
hex = "0.4"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Metrics
hdrhistogram = "7"

# Base64 for PKCE
base64 = "0.22"

# Utilities
chrono = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
num_cpus = "1.16"
parking_lot = "0.12"
